--- a/mesParcoursRecueils/ΕΤΑΙΡΑ.md
+++ b/mesParcoursRecueils/ΕΤΑΙΡΑ.md
@@ -53,6 +53,18 @@ Eu sempre gritava isso e avisava, mas você escutava nossas histórias do mesmo 
 E então agora você, gemendo bastante, chora, e nós nos deitamos no colo da Náiade. 
 
 - 5.121 (Philainion)
+ΦΙΛΟΔΗΜΟΥ   
+Lemma: εἰς Φιλέννιον ἑταίραν ἔπαινος θαυμάσιος   
+
+Μικκὴ καὶ μελανεῦσα Φιλαίνιον, ἀλλὰ σελίνων    
+οὐλοτέρη, καὶ μνοῦ χρῶτα τερεινοτέρη,    
+καὶ κεστοῦ φωνεῦσα μαγώτερα, καὶ παρέχουσα    
+πάντα, καὶ αἰτῆσαι πολλάκι φειδομένη:    
+τοιαύτην στέργοιμι Φιλαίνιον, ἄχρις ἂν εὕρω   
+ἄλλην, ὦ χρυσέη Κύπρι, τελειοτέρην.    
+
+Filainion é pequena e morena, e mais encaracolada que a salsinha; ela tem a pele mais delicada que a penugem e quando ela fala há mais coisas mágicas do que em teu cinto, deusa; ela tudo dá e frequentemente evita pedir. Dourada Cypris, que eu ame essa Filainion até que encontre uma outra ainda melhor!
+  
 - 5.123
 - 5.125
 - 5.126
