--- a/mesParcoursRecueils/ΕΤΑΙΡΑ.md
+++ b/mesParcoursRecueils/ΕΤΑΙΡΑ.md
@@ -141,6 +141,31 @@ que a lâmpada o faça dormir e que ele, agitando-se sem parar no colo dela, dur
 
 - 5.184
 - 5.191
+
+ΜΕΛΕΑΓΡΟΥ
+
+Lemma:  εἰς ἑταίραν ἄσωτον · ζηλότυπον καὶ μανίας μεστόν
+
+Lemmatiste: C
+
+ἄστρα, καὶ ἡ φιλέρωσι καλὸν φαίνουσα Σελήνη,
+καὶ Νύξ, καὶ κώμων σύμπλανον ὀργάνιον,
+ἆρά γε τὴν φιλάσωτον ἔτ᾽ ἐν κοίταισιν ἀθρήσω
+ἄγρυπνον, λύχνῳ πόλλ᾽ ἀποκλαομένην;
+ἦ τιν᾽ ἔχει σύγκοιτον ; ἐπὶ προθύροισι μαράνας
+δάκρυσιν ἐκδήσω τοὺς ἱκέτας στεφάνους,
+ἓν τόδ᾽ ἐπιγράψας:
+Κύπρι, σοὶ Μελέαγρος, ὁ μύστης
+σῶν κώμων, στοργῆς σκῦλα τάδ᾽ ἐκρέμασεν.
+
+Oh, as estrelas e a lua que com beleza iluminam os amantes
+e também a noite e o pequeno instrumento errante das orgias,
+por acaso verei a promíscua ainda em seu leito,
+desperta e chorando copiosamente à luz de vela?
+Ou ela tem alguém em sua cama? Consumindo-me em lágrimas,
+irei amarrar em seus portões as coroas de súplicas,
+onde terei escrito isto: "Para você, Cypris,
+
 - 5.197
 - 5.199
 - 5.201
