--- a/mesParcoursRecueils/ΕΤΑΙΡΑ.md
+++ b/mesParcoursRecueils/ΕΤΑΙΡΑ.md
@@ -170,7 +170,46 @@ onde terei escrito isto: "Para você, Cypris,
 - 5.199
 - 5.201
 - 5.202
+
+Ἀσκληπιάδου
+
+Lemma: εἰς Πλαγγὼ ἑταίραν
+
+Lemmatiste: C
+
+πορφυρέην μάστιγα καὶ ἡνία σιγαλόεντα
+Πλαγγὼν εὐίππων θῆκεν ἐπὶ προθύρων,
+νικήσασα κέλητι Φιλαινίδα τὴν πολύχαρμον,
+ἑσπερινῶν πώλων ἄρτι φρυασσομένων.
+Κύπρι φίλη, σὺ δὲ τῇδε πόροις νημερτέα νίκης
+δόξαν, ἀείμνηστον τήνδε τιθεῖσα χάριν.
+
+O escuro chicote et as brilhantes renas, Plagon os colocou sob o pórtico dos bons cavalos após vencer Philainis, que é muito belicosa, na corrida, exatamente quando os jovens começam a murmurar. Querida Cipris, tu destes a ela verdadeira fama pela vitória, tornando essa graça inesquecível.
+  
 - 5.204
+ΜΕΛΕΑΓΡΟΥ
+
+Lemma: εἰς Τιμάριον ἑταίραν · τωθαστικόν
+
+Lemmatiste: C
+
+οὐκέτι, Τιμάριον, τὸ πρὶν γλαφυροῖο κέλητος
+πῆγμα φέρει πλωτὸν Κύπριδος εἰρεσίην:
+ἀλλ᾽ ἐπὶ μὲν νώτοισι μετάφρενον, ὡς κέρας ἱστῷ,
+κυρτοῦται, πολιὸς δ᾽ ἐκλέλυται πρότονος:
+ἱστία δ᾽ αἰωρητὰ χαλᾷ σπαδονίσματα μαστῶν
+ἐκ δὲ σάλου στρεπτὰς γαστρὸς ἔχει ῥυτίδας:
+νέρθε δὲ πάνθ᾽ ὑπέραντλα νεώς, κοίλῃ δὲ θάλασσα
+πλημμύρει, γόνασιν δ᾽ ἔντρομός ἐστι σάλος.
+δύστανός τοι ζωὸς ἔτ᾽ ὢν Ἀχερουσίδα λίμνην
+πλεύσετ᾽ ἄνωθ᾽ ἐπιβὰς γραὸς ἐπ᾽ εἰκοσόρῳ.
+
+Timarion, ela já não mais tem, como antes tinha, o casco de um lustroso barco a remos de Cypris.
+Ora, sobre as costas, como a vara no mastro do navio, curvam-se os ombros e os cabelos, cinzas tal qual o cordame, caem;
+as velas suspensas tombam igual à flacidez dos seios, e ela tem a pele da barriga recurvada, agitada pelas ondas;
+por baixo da nau, tudo faz água, pois o mar transborda pela escotilha, e a agitação nos joelhos é tremenda.
+Desafortunado você que, ainda estando vivo, navegará o lago de Arqueronte indo de cima a baixo no barco da velha.
+
 - 5.220 (παλλακή)
 
 ΑΓΑΘΙΟΥ ΣΧΟΛΑΣΤΙΚΟΥ
