--- a/mesParcoursRecueils/ΠΟΡΝΗ.md
+++ b/mesParcoursRecueils/ΠΟΡΝΗ.md
@@ -290,4 +290,17 @@ La seule poétesse du livre V est Nossis. On peut dire que le V represente major
 
 Il n'y a pas de putes au Cycle d'Agathias? Non, il y en a. Au Cycle on n'a pas de lemmatiste, c'est ça la différence
 
+## Épigrammes où le porné est dans le texte épigrammátique
+- 5.257
 
+ΠΑΛΛΑΔΑΣ
+νῦν καταγιγνώσκω καὶ τοῦ Διὸς ὡς ἀνεράστου,
+μὴ μεταβαλλομένου τῆς σοβαρᾶς ἕνεκα:
+οὔτε γὰρ Εὐρώπης, οὐ τῆς Δανάης περὶ κάλλος,
+οὔθ᾽ ἁπαλῆς Λήδης ἐστ᾽ ἀπολειπομένη:
+εἰ μὴ τὰς πόρνας παραπέμπεται: οἶδα γὰρ αὐτὸν
+τῶν βασιλευουσῶν παρθενικῶν φθορέα,
+
+E agora percebo como Zeus é cruel amante já que não se transforma por causa dessa impetuosa, pois ela, em beleza, não é deixada para trás nem por Europa ou por Dânae, nem mesmo pela delicada Leda. E se não se entrega às putas é porque eu sei que ele é um sedutor de jovens princesas.
+
+Un seule épigramme où le poète emploie le mot πόρνη. Par contre, ce mot est employé 13 fois par les scholiastes.
