--- a/mesParcoursRecueils/ΕΤΑΙΡΑ.md
+++ b/mesParcoursRecueils/ΕΤΑΙΡΑ.md
@@ -17,6 +17,19 @@
 - 5.22
 - 5.23
 - 5.24
+
+ΦΙΛΟΔΗΜΟΥ ἤ ΜΕΛΕΑΓΡΟΥ
+
+Lemma: εἰς Ἡλιοδώραν τὴν ἑταίραν
+
+ψυχή μοι προλέγει φεύγειν πόθον Ἡλιοδώρας,
+δάκρυα καὶ ζήλους τοὺς πρὶν ἐπισταμένη.
+φησὶ μὲν ἀλλὰ φυγεῖν οὔ μοι σθένος: ἡ γὰρ ἀναιδὴς
+αὐτὴ καὶ προλέγει, καὶ προλέγουσα φιλεῖ.
+
+A alma, conhecedora das lágrimas e dos ciúmes já ocorridos, me preveniu para fugir do desejo por Heliodora.
+Ora, ela falou, mas não há vigor em mim para fugir, já que a descarada preveniu, mas também ela própria, enquanto previne, ama!
+
 - 5.25
 - 5.27
 - 5.31
