--- a/mesParcoursRecueils/ΕΤΑΙΡΑ.md
+++ b/mesParcoursRecueils/ΕΤΑΙΡΑ.md
@@ -36,6 +36,20 @@ Ora, ela falou, mas não há vigor em mim para fugir, já que a descarada preven
 - 5.32
 - 5.40
 - 5.44
+
+ΡΟΥΦΙΝΟΥ
+
+Lemma: εἰς τὰς ἑταίρας Λέμβιον καὶ Κερκούριον : εἰσὶ δὲ ταῦτα τὰ ὀνόματα μικρὸν καραβίων, τῶν παρ᾽ ἡμῖν σανδάλων
+
+Lemmatiste: L
+Λέμβιον, ἡ δ᾽ ἑτέρα Κερκούριον, αἱ δύ᾽ ἑταῖραι
+αἰὲν ἐφορμοῦσιν τῷ Σαμίων λιμένι.
+ἀλλά, νέοι, πανδημὶ τὰ λῃστρικὰ τῆς Ἀφροδίτης
+φεύγεθ᾽: ὁ συμμίξας καὶ καταδὺς πίεται.
+
+Escuna e a outra, Chalupinha, essas duas meretrizes estão sempre bloqueando o porto de Samos; 
+mas, jovens, fujam das piratas de Afrodite! Quem se envolve e mergulha nessas águas se afoga.
+
 - 5.46
 - 5.47
 - 5.52
