--- a/mesParcoursRecueils/ΕΤΑΙΡΑ.md
+++ b/mesParcoursRecueils/ΕΤΑΙΡΑ.md
@@ -47,7 +47,7 @@ Lemmatiste: L
 ἀλλά, νέοι, πανδημὶ τὰ λῃστρικὰ τῆς Ἀφροδίτης
 φεύγεθ᾽: ὁ συμμίξας καὶ καταδὺς πίεται.
 
-Escuna e a outra, Chalupinha, essas duas meretrizes estão sempre bloqueando o porto de Samos; 
+Escuna e a outra, Jangadinha, essas duas meretrizes estão sempre bloqueando o porto de Samos; 
 mas, jovens, fujam das piratas de Afrodite! Quem se envolve e mergulha nessas águas se afoga.
 
 - 5.46
